Revisions for the overall styling

--- a/wp-content/themes/audubon-church2/assets/scss/components/_blog.scss
+++ b/wp-content/themes/audubon-church2/assets/scss/components/_blog.scss
@@ -11,6 +11,9 @@
         margin: 0 auto;
         max-width: $primaryWidth;
         padding: 1rem;
+        p {
+            text-align: justify;
+        }
         .post {
             display: flex;
                 align-items: flex-start;
