--- a/wp-content/themes/audubon-church2/assets/scss/components/layouts/partials/_weekly-schedule.scss
+++ b/wp-content/themes/audubon-church2/assets/scss/components/layouts/partials/_weekly-schedule.scss
@@ -1,5 +1,5 @@
 .weekly-schedule {
-    background-color: rgba(114, 1, 1, 0.78);
+    background-color: rgba(145, 141, 141, .9);
     padding: 2em;
     &__container {
         display: flex;
