--- a/wp-content/themes/audubon-church2/assets/scss/components/_header.scss
+++ b/wp-content/themes/audubon-church2/assets/scss/components/_header.scss
@@ -24,7 +24,8 @@ Header Styles
       width: 100%;
       a {
           color: $white;
-          font-family: 'Delius';
+          font-family: 'Open Sans', sans-serif;
+          font-weight: 400;
           font-size: 1.25em;
       }
   }
