--- a/wp-content/themes/audubon-church2/assets/scss/components/layouts/partials/_events.scss
+++ b/wp-content/themes/audubon-church2/assets/scss/components/layouts/partials/_events.scss
@@ -11,6 +11,7 @@
     .layout-event {
         border-bottom: .1em solid gray;
         padding: 2em 1rem;
+        text-align: justify;
 
         &__date {
             & > span {
@@ -21,9 +22,6 @@
             h3 {
                 margin-bottom: 0;
             }
-        }
-        &__time {
-            font-weight: 700;
         }
 
         &__description {
