--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/_homepage-slider.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/_homepage-slider.scss
@@ -15,6 +15,60 @@
         width: 100%;
     }
 
+    .flickity-prev-next-button {
+        background-color: $white;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        align-items: center;
+        padding: .5em;
+        background: transparent;
+        border: 1px solid transparent;
+        transition: .35s border ease-in-out;
+        box-shadow: 0 0 1px white;
+
+        &:hover {
+            border: 1px solid $white;
+            cursor: pointer;
+        }
+
+        svg {
+            width: 2em;
+            height: auto;
+            fill: white;
+        }
+        &.previous {
+            left: 0;
+            right: auto;
+            border-left: 0;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            transition: .35s border-radius ease-in-out;
+        }
+        &.next {
+            left: auto;
+            right: 0;
+            border-right: 0;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+            transition: .35s border-radius ease-in-out;
+        }
+
+
+        &:active {
+            &.previous {
+                border-top-right-radius: 2px;
+                border-bottom-right-radius: 2px;
+            }
+            &.next {
+                border-top-left-radius: 2px;
+                border-bottom-left-radius: 2px;
+            }
+        }
+
+    }
+   
     .button-row {
         display: flex;
         position: absolute;
@@ -35,10 +89,6 @@
             }
         }
 
-        .button--previous,
-        .button--next {
-            background-color: $white;
-        }
     }
 
     &__slide {
@@ -60,7 +110,7 @@
             width: 100%;
         }
 
-        &:after {
+        &.darken-background:after {
             background: rgba(0, 0, 0, 0.6);
             content: "";
             height: 100%;
