--- a/wp-content/themes/legacyfarm/assets/scss/style.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/style.scss
@@ -2,58 +2,8 @@
 * style.scss imports each of the style sheets
 *****************************/
 
-
 // Foundational styles
-@import "base-styles/vars";
-@import "base-styles/mixins";
-@import "base-styles/buttons";
+@import "base-styles/base-styles";
 
-// Components
-@import "template-components/blog";
-@import "template-components/blog-single";
-@import "template-components/footer";
-@import "template-components/general";
-@import "template-components/header";
-@import "template-components/layout-fragments/navigation/main-navigation";
-
-// Header Fragments
-@import "template-components/layout-fragments/header-fragments/hamburger-menu";
-@import "template-components/layout-fragments/header-fragments/site-logo";
-@import "template-components/layout-fragments/blog-categories";
-@import "template-components/layout-fragments/blog-meta";
-@import "template-components/layout-fragments/slider";
-@import "template-components/layout-fragments/navigation/blog-pagination";
-@import "template-components/layout-fragments/navigation/blog-single-next-prev-links";
-
-// template-components/layouts
-@import "template-components/layouts/latest-animals-for-sale";
-@import "template-components/layouts/default";
-@import "template-components/layouts/full-width";
-@import "template-components/layouts/half-and-half";
-@import "template-components/layouts/two-thirds";
-@import "template-components/layouts/image-gallery";
-@import "template-components/layouts/page-header";
-@import "template-components/layouts/default-page-header";
-@import "template-components/layouts/two-column";
-@import "template-components/layouts/three-column";
-@import "template-components/layouts/content-columns";
-@import "template-components/layouts/media-object";
-
-
-// template-components/layouts/partials
-@import "template-components/layouts/partials/homepage-slider";
-@import "template-components/layouts/partials/latest-blog_posts";
-@import "template-components/layouts/partials/great-pyrenees-animal-list";
-@import "template-components/layouts/partials/events";
-@import "template-components/layouts/partials/latest-sermon";
-@import "template-components/layouts/partials/homepage-header";
-@import "template-components/layouts/partials/our-story";
-@import "template-components/layouts/partials/weekly-schedule";
-
-// Components/template-styles
-@import "template-components/template-styles/appreciating";
-@import "template-components/template-styles/front-page";
-@import "template-components/template-styles/full-width-template";
-@import "template-components/template-styles/sermons";
-
-
+// Sub folder stylesheets
+@import "template-components/template-components";
