--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/homepage-slider/_latest-sermon.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/homepage-slider/_latest-sermon.scss
@@ -17,10 +17,38 @@
             background-color: rgba(0,0,0, .8);
         }
 
+        &__heading {
+            font-size: 3em;
+            text-shadow: 0 0 white;
+            text-transform: uppercase;
+            font-weight: normal;
+            margin-bottom: .25em;
+        }
+
+        &__title {
+            margin-bottom: 2em;
+            h3 {
+                margin-top: .5em;
+                font-size: 1.5em;
+                text-shadow: 0 0 white;
+                text-transform: capitalize;
+                font-weight: normal;
+                text-align: center;
+            }
+        }
+
         .contain {
             height: 100%;
             justify-content: center;
         }
        
+    }
+
+    .view-more-sermons {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%);
+        border-bottom: 0;
     }
 }
