updates classes and breakpoints for responsive and starts adding new strategy for sermon category dropdown on desktop

--- a/wp-content/themes/legacyfarm/assets/scss/template-components/_blog.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/_blog.scss
@@ -16,7 +16,7 @@
         margin: .5rem;
         width: 90%;
         
-        @include breakpoint(mediumScreen) {
+        @include breakpoint(medium-screen-min) {
             width: 46%;
         }
 
