--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/_great-pyrenees-animal-list.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/_great-pyrenees-animal-list.scss
@@ -24,7 +24,7 @@
         margin: .5em;
         width: 100%;
 
-        @include breakpoint(mobile) {
+        @include breakpoint(mobile-min) {
             width: 30.33%;
         }
     }
