--- a/wp-content/themes/legacyfarm/assets/scss/template-components/template-styles/_full-width-template.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/template-styles/_full-width-template.scss
@@ -30,7 +30,7 @@
 .media-object {
     img {
         width: 100%;
-        @include breakpoint(mobile) {
+        @include breakpoint(mobile-min) {
             width: auto;
         }
     }
