--- a/wp-content/themes/legacyfarm/assets/scss/base-styles/_mixins.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/base-styles/_mixins.scss
@@ -1,34 +1,74 @@
 @mixin breakpoint($point) {
-  @if $point == desktop {
-    @media (min-width: 70em) { @content ; }
- }
-   @else if $point == mediumScreen {
-    @media (min-width: 60em) { @content ; }
- }
- @else if $point == smallScreen {
-  @media (min-width: 50em) { @content ; }
-}
-  @else if $point == mobile {
-    @media (min-width: 37.5em)  { @content ; }
- }
- @else if $point == mobileonly {
+  @if $point == mobile-max {
     @media (max-width: 37.5em)  { @content ; }
-
- }
- @else if $point == smallScreenOnly {
-    @media (max-width: 50em)  { @content ; }
-
- }
+  }
+  @else if $point == mobile-min {
+    @media (min-width: 37.51em)  { @content ; }
+  }
+  @else if $point == small-screen-max {
+    @media (max-width: 50em) { @content ; }
+  }
+  @else if $point == small-screen-min {
+    @media (min-width: 50.01em) { @content ; }
+  }
+  @else if $point == medium-screen-max {
+    @media (max-width: 60) { @content ; }
+  }
+  @else if $point == medium-screen-min {
+    @media (min-width: 60.01em) { @content ; }
+  }
+  @if $point == large-screen-max {
+    @media (max-width: 70em) { @content ; }
+  }
+  @if $point == large-screen-min {
+    @media (min-width: 70.01em) { @content ; }
+  }
 }
 
-.mobile-hidden {
-    @include breakpoint(mobileonly) {
+.mobile-max {
+    @include breakpoint(mobile-min) {
       display: none !important;
     }
 }
 
-.desktop-hidden {
-    @include breakpoint(mobile) {
-      display: none !important;
-    }
+.mobile-min {
+  @include breakpoint(mobile-max) {
+    display: none !important;
+  }
+}
+
+.small-screen-max {
+  @include breakpoint(small-screen-min) {
+    display: none !important;
+  }
+}
+
+.small-screen-min {
+  @include breakpoint(small-screen-max) {
+    display: none !important;
+  }
+}
+
+.medium-screen-max {
+  @include breakpoint(medium-screen-min) {
+    display: none !important;
+  }
+}
+
+.medium-screen-min {
+  @include breakpoint(medium-screen-max) {
+    display: none !important;
+  }
+}
+
+.large-screen-max {
+  @include breakpoint(large-screen-min) {
+    display: none !important;
+  }
+}
+
+.large-screen-min {
+  @include breakpoint(large-screen-max) {
+    display: none !important;
+  }
 }
