--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layout-fragments/header-fragments/_hamburger-menu.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layout-fragments/header-fragments/_hamburger-menu.scss
@@ -5,7 +5,7 @@
     display: inline-block;
     padding: 1em;
     z-index: 2000;
-    @include breakpoint(mediumScreen) {
+    @include breakpoint(medium-screen-min) {
         display: none;
     }
     &:hover {
