--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layout-fragments/navigation/_blog-pagination.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layout-fragments/navigation/_blog-pagination.scss
@@ -7,6 +7,7 @@
         padding: .5em .8em;
         border: .1em solid $audubonRed;
         border-radius: .35em;
+        text-decoration: none;
 
         &:after {
             display: none;
