--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_content-columns.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_content-columns.scss
@@ -2,7 +2,7 @@
     text-align: center;
     position: relative;
     width: 100%;
-    @include breakpoint(mobile) {
+    @include breakpoint(mobile-min) {
         width: 33.3%;
     }
     img {
@@ -29,7 +29,7 @@
     position: relative;
     width: 100%;
     height: auto;
-    @include breakpoint(mobile) {
+    @include breakpoint(mobile-min) {
         width: 50%;
     }
     img {
