--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_default-page-header.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_default-page-header.scss
@@ -5,7 +5,7 @@
     position: relative;
     overflow: hidden;
 
-    @include breakpoint(mediumScreen) {
+    @include breakpoint(medium-screen-min) {
         height: 25em;
     }
 
@@ -20,14 +20,14 @@
         z-index: 0;
         opacity: .9;
 
-        @include breakpoint(mediumScreen) {
+        @include breakpoint(medium-screen-min) {
             background: linear-gradient(to right, #3c3c3c 64%, #720101 60%, transparent 100%);
 
         }
     }
 
     &:after {
-        @include breakpoint(mediumScreen) {
+        @include breakpoint(medium-screen-min) {
             background: white;
             content: "";
             height: 100%;
