--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_half-and-half.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_half-and-half.scss
@@ -7,13 +7,13 @@
     .inner-container {
         display: flex;
             flex-direction: column;
-            @include breakpoint(mobile) {
+            @include breakpoint(mobile-min) {
                 flex-direction: row;
             }
         .column {
             display: inline-block;
             margin-bottom: .5em;
-            @include breakpoint(mobile) {
+            @include breakpoint(mobile-min) {
                 margin-bottom: 0em;
                 margin-right: .5em;
                 width: 50%;
