--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_latest-animals-for-sale.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_latest-animals-for-sale.scss
@@ -1,7 +1,7 @@
 .layout-for-sale {
     margin: 4rem auto;
 
-    @include breakpoint(mediumScreen) {
+    @include breakpoint(medium-screen-min) {
         height: 35rem; // play with a fixed height
         padding-bottom: 4em;
     }
@@ -13,7 +13,7 @@
         height: 100%;
         max-width: $largeWidth;
 
-        @include breakpoint(mediumScreen) {
+        @include breakpoint(medium-screen-min) {
             flex-direction: row;
         }
     }
@@ -25,7 +25,7 @@
         overflow: hidden;
         width: 100%;
 
-        @include breakpoint(mediumScreen) {
+        @include breakpoint(medium-screen-min) {
             width: 70%;
         }
 
@@ -150,7 +150,7 @@
     &__right {
         display: none;
 
-        @include breakpoint(mediumScreen) {
+        @include breakpoint(medium-screen-min) {
             display: flex;
             flex-direction: column;
             position: relative;
