--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_three-column.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/_three-column.scss
@@ -4,7 +4,7 @@
     .inner-container {
         display: flex;
             flex-direction: column;
-            @include breakpoint(mobile) {
+            @include breakpoint(mobile-min) {
                 flex-direction: row;
             }
         .column {
@@ -16,14 +16,14 @@
             min-height: 12rem;
             overflow: hidden;
             padding: 10% 0em;
-            @include breakpoint(mobile) {
+            @include breakpoint(mobile-min) {
                 margin-bottom: 0em;
                 margin-right: .5em;
                 min-height: 25vw;
                 padding: 5% 0em;
                 width: 33.33%;
             }
-            @include breakpoint(desktop) {
+            @include breakpoint(large-screen-min) {
                 min-height: 12rem;
             }
             p:last-of-type {
