--- a/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/_homepage-header.scss
+++ b/wp-content/themes/legacyfarm/assets/scss/template-components/layouts/partials/_homepage-header.scss
@@ -14,7 +14,7 @@
         transform: translate(-50%, -50%);
         width: 90vw;
         z-index: 1;
-        @include breakpoint(mobile) {
+        @include breakpoint(mobile-min) {
             width: 68vw;
         }
     }
