Updates some dashboard labels, updates line height for headers, and replaces default page header with what we are using everywhere else

--- a/wp-content/themes/audubon-church/assets/scss/template-components/layouts/partials/homepage-slider/_latest-sermon.scss
+++ b/wp-content/themes/audubon-church/assets/scss/template-components/layouts/partials/homepage-slider/_latest-sermon.scss
@@ -27,7 +27,7 @@
             text-shadow: 0 0 white;
             text-transform: uppercase;
             font-weight: normal;
-            margin-bottom: .25em;
+            margin-bottom: 0;
 
             @include breakpoint(mobile-min) {
                 font-size: 3em;
