--- a/wp-content/themes/audubon-church/assets/scss/template-components/template-styles/_sermons.scss
+++ b/wp-content/themes/audubon-church/assets/scss/template-components/template-styles/_sermons.scss
@@ -44,8 +44,7 @@
     }
 
     .sermon {
-        // border: .35em solid #6c7781;
-        padding-top: 1em;
+        padding: 1em;
         position: relative;
         margin: 0;
         width: 100%;
