--- a/wp-content/themes/audubon-church/assets/scss/template-components/_general.scss
+++ b/wp-content/themes/audubon-church/assets/scss/template-components/_general.scss
@@ -75,35 +75,13 @@ a {
     text-align: center;
     text-align: center;
     font-weight: 700;
-    transition: .35s all ease-in-out;
-
-
-    // &:after {
-    //     background-color: $audubonRed;
-    //     color: $white;
-    //     content: '';
-    //     display: block;
-    //     height: .25em;
-    //     margin-top: .25em;
-    //     position: absolute;
-    //     width: 100%;
-    //     width: 100%;
-    //     opacity: 1;
-    //     transition: .35s all ease-in-out;
-
-    // }
+    // transition: .35s all ease-in-out;
 
     &:focus,
     &:hover {
         color: $audubonRed;
         text-decoration: none;
         transition: .35s all ease-in-out;
-
-        // &:after {
-        //     margin-top: 1em;
-        //     opacity: 0;
-        //     transition: .35s all ease-in-out;
-        // }
     }
 }
 
@@ -116,12 +94,8 @@ a {
 
 
 #main-content {
+    min-height: calc(100vh - 4.8rem);
     overflow: hidden;
-}
-
-h2 {
-    display: block;
-    font-size: 1.5em;
 }
 
 h1,
@@ -132,6 +106,30 @@ h5,
 h6 {
     margin: 0;
     margin-bottom: 1rem;
+}
+
+h1 {
+    line-height: 1.5;
+}
+
+h2 {
+    font-size: 1.5em;
+    line-height: 1.4;
+}
+
+h3 {
+    line-height: 1.3;
+}
+
+h4 {
+    line-height: 1.2;
+}
+
+h5 {
+    line-height: 1.1;
+}
+
+h6 {
     line-height: 1;
 }
 
