--- a/wp-content/themes/audubon-church/assets/scss/template-components/_header.scss
+++ b/wp-content/themes/audubon-church/assets/scss/template-components/_header.scss
@@ -7,6 +7,7 @@ Header Styles
     display: flex;
         align-items: center;
         justify-content: space-between;
+    height: 4.8rem;
     position: relative;
     z-index: 2000;
 
