Runs gulp and fixes syntax error

--- a/wp-content/themes/audubon-church/style.css
+++ b/wp-content/themes/audubon-church/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Legacy Farm
+Theme Name: Audubon Church
 Author: Tyler Akin
-Description: Originally a Custom HTML Site, Then Converted To Wordpress
+Description: Audubon Church Website
 Version: 0.0.1
 */
